// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsPanel > スナップショットテスト > カスタム設定 + 時間制限5分 + カスタム25mmのスナップショット 1`] = `
<div
  class="settings-panel"
>
  <div
    data-testid="preset-selector"
  >
    PresetSelector
  </div>
  <div
    data-testid="session-config-selector"
  >
    SessionConfigSelector
  </div>
  <div
    data-testid="difficulty-selector"
  >
    DifficultySelector
  </div>
  <div
    data-testid="detailed-settings"
  >
    DetailedSettings
  </div>
  <div
    class="settings-panel__summary"
  >
    <h2
      class="settings-panel__summary-title"
    >
      現在の設定
    </h2>
    <div
      class="settings-panel__summary-content"
    >
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          プリセット:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          カスタム設定
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          セッション:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          時間制限モード: 5分
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          難易度:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          カスタム 25mm
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="練習を開始"
    class="settings-panel__start-button"
    type="button"
  >
    練習を開始
  </button>
</div>
`;

exports[`SettingsPanel > スナップショットテスト > 基礎練習 + 問題数10問 + 上級者のスナップショット 1`] = `
<div
  class="settings-panel"
>
  <div
    data-testid="preset-selector"
  >
    PresetSelector
  </div>
  <div
    data-testid="session-config-selector"
  >
    SessionConfigSelector
  </div>
  <div
    data-testid="difficulty-selector"
  >
    DifficultySelector
  </div>
  <div
    data-testid="detailed-settings"
  >
    DetailedSettings
  </div>
  <div
    class="settings-panel__summary"
  >
    <h2
      class="settings-panel__summary-title"
    >
      現在の設定
    </h2>
    <div
      class="settings-panel__summary-content"
    >
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          プリセット:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          基礎練習
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          セッション:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          問題数モード: 10問
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          難易度:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          上級者
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="練習を開始"
    class="settings-panel__start-button"
    type="button"
  >
    練習を開始
  </button>
</div>
`;

exports[`SettingsPanel > スナップショットテスト > 総合練習 + 時間制限10分 + 初心者のスナップショット 1`] = `
<div
  class="settings-panel"
>
  <div
    data-testid="preset-selector"
  >
    PresetSelector
  </div>
  <div
    data-testid="session-config-selector"
  >
    SessionConfigSelector
  </div>
  <div
    data-testid="difficulty-selector"
  >
    DifficultySelector
  </div>
  <div
    data-testid="detailed-settings"
  >
    DetailedSettings
  </div>
  <div
    class="settings-panel__summary"
  >
    <h2
      class="settings-panel__summary-title"
    >
      現在の設定
    </h2>
    <div
      class="settings-panel__summary-content"
    >
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          プリセット:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          カスタム設定
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          セッション:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          時間制限モード: 10分
        </span>
      </div>
      <div
        class="settings-panel__summary-item"
      >
        <span
          class="settings-panel__summary-label"
        >
          難易度:
        </span>
        <span
          class="settings-panel__summary-value"
        >
          初心者
        </span>
      </div>
    </div>
  </div>
  <button
    aria-label="練習を開始"
    class="settings-panel__start-button"
    type="button"
  >
    練習を開始
  </button>
</div>
`;
